fix overflow issue

--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ button {
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr;
+  width: 100vw;
+  overflow: hidden;
 }
 
 .header-wrapper {
